<resources>
    <string name="app_name">Pin Fever</string>
    <string name="title_activity_login">Login</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_hall_of_fame">HallOfFame</string>
    <string name="title_activity_new_game">NewGame</string>
    <string name="title_activity_friends_list">FriendsList</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_detail_view">DetailView</string>
    <string name="title_activity_hall_trophy">HallTrophy</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_round">Round</string>
    <string name="button_Login">Login</string>
    <string name="button_Register">Register</string>
    <string name="button_LoginFaceBook">Login with Facebook</string>
    <string name="button_LoginGoogle">Login with Google+</string>
    <string name="placeholder_Username">Username</string>
    <string name="placeholder_Email">Email (optional)</string>
    <string name="placeholder_Name">Name</string>
    <string name="placeholder_Password">Password</string>
    <string name="description_avatar">avatar</string>
    <string name="description_logo">logo</string>
    <string name="description_settings">settings</string>
    <string name="description_newGame">New Game</string>
    <string name="textView_activeGames">Active Games</string>
    <string name="header_friends">Friends</string>
    <string name="header_detailView">Detail View</string>
    <string name="revanche">Revanche</string>
    <string name="round">Round</string>
    <string name="question">Question</string>
    <string name="startGame">Start Game</string>
    <string name="start">Start</string>
    <string name="random">Random</string>
    <string name="addFriend">Add Friend</string>
    <string name="message_addFriend">Type in the username of your friend:</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="userName_random">Random</string>
    <string name="okay">Okay</string>
    <string name="submit">Submit</string>
    <string name="next">Next</string>
    <string name="title_activity_category_chooser">CategoryChooser</string>
    <string name="required">Required</string>
    <string name="passwordsDontMatch">Passwords don\'t Match</string>
    <string name="signOut">Sign Out</string>
    <string name="sessionExpired">Session expired! Please sign in again!</string>
    <string name="message_UserNotFound">User not found!</string>
    <string name="message_NoInternetConnection">No internet connection</string>
    <string name="displayName">New Text</string>
    <string name="lable_displayName">Display Name:</string>
    <string name="change">change</string>
    <string name="message_changeDisplayName">Change Your Display Name</string>
    <string name="changeDisplayName">Change Display Name</string>
</resources>
