<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="net.unverschaemt.pinfever.Register">

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:weightSum="1">

        <net.unverschaemt.pinfever.CircularImageButton
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/avatarSelector"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/circle"
            android:onClick="changeAvatar"
            android:contentDescription="@string/description_avatar"
            android:layout_alignParentTop="false"
            android:layout_centerHorizontal="true"
            android:scaleType="centerCrop"
            android:src="@mipmap/dummy_avatar" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/Register_userName"
            android:hint="@string/placeholder_Username"
            android:layout_alignParentLeft="false"
            android:layout_alignParentTop="false"
            android:layout_centerVertical="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/Register_email"
            android:hint="@string/placeholder_Email"
            android:layout_below="@+id/Register_userName"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/Register_name"
            android:layout_gravity="center_horizontal"
            android:hint="@string/placeholder_Name"
            android:layout_below="@+id/Register_email"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/Register_password1"
            android:hint="@string/placeholder_Password"
            android:layout_below="@+id/Register_name"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/Register_password2"
            android:hint="@string/placeholder_Password"
            android:layout_below="@+id/Register_password1"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_Register"
            android:id="@+id/Register_register"
            android:layout_alignParentLeft="false"
            android:layout_alignParentTop="false"
            android:layout_alignParentBottom="true" />

    </RelativeLayout>
</RelativeLayout>
