<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="net.unverschaemt.pinfever.Home">

    <ImageButton
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/Home_settings"
        android:background="@mipmap/settings"
        android:onClick="settings"
        android:contentDescription="@string/description_settings"
        android:focusableInTouchMode="false"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" />

    <ImageButton
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/Home_friends"
        android:background="@mipmap/friends"
        android:onClick="friends"
        android:contentDescription="@string/description_settings"
        android:focusableInTouchMode="false"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false" />

    <net.unverschaemt.pinfever.CircularImageButton
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:id="@+id/Home_avatar"
        android:layout_centerHorizontal="true"
        android:background="@drawable/circle"
        android:onClick="changeAvatar"
        android:contentDescription="@string/description_avatar"
        android:src="@mipmap/dummy_avatar"
        android:cropToPadding="false"
        android:scaleType="centerCrop" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="210"
        android:id="@+id/Home_score"
        android:layout_below="@+id/Home_avatar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="35sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView_activeGames"
        android:id="@+id/Home_textView_activeGames"
        android:layout_below="@+id/Home_score"
        android:textStyle="bold"
        android:textSize="35sp"
        android:layout_alignParentLeft="true" />

    <ImageButton
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/Home_newGame"
        android:onClick="newGame"
        android:layout_below="@+id/Home_score"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/description_newGame"
        android:background="@mipmap/new_game" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/Home_activeGames"
        android:smoothScrollbar="false"
        android:layout_below="@+id/Home_textView_activeGames" />

</RelativeLayout>
